2010-05-11  Jeffrey Stedfast  <fejj@novell.com>

	* provider.cpp: Fixed inherited macros to reference the
	TextElement property ids rather than the Inline property ids,
	since they've been moved.

	* contentcontrol.cpp|h (ContentControlChangedEventArgs): Renamed
	from ContentChangedEventArgs since it conflicts with the new SL4
	public ContentChangedEventArgs type.

	* richtextbox.h (RoutedEventArgs): Stub out
	ContentChangedEventArgs, TextPointer and TextSelection and a bunch
	more DP's for RichTextBox.

2010-05-11  Jeffrey Stedfast  <fejj@novell.com>

	* layout.h (ITextAttributes): Provide a way to get flow direction.

	* textelement.h (TextElement): Implement new ITextAttributes
	Direction() method.

2010-05-11  Jeffrey Stedfast  <fejj@novell.com>

	* textelement.cpp: Promote inner workings of Inline to TextElement
	since all that logic is needed at the higher level now.

2010-05-10  Larry Ewing  <lewing@novell.com>

	* brush.cpp (SetupBrush): add calls to set the color tolerance on
	the patterns we create for gradients.

2010-05-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml-to-header.cs: Update license.

2010-05-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* bitmapimage.cpp:
	* downloader.cpp|h: Remove hacks for mozilla bug #444160, mozilla bug #564806
	is worse and forces us to use the slower streaming interface in which
	bug #44160 doesn't manifest itself, so this hack is not needed anymore.

2010-05-10  Jeffrey Stedfast  <fejj@novell.com>

	* textelement.cpp|h: New source files for TextElement and
	subclasses like Inline, Run, and all the new ones for RichTextBox.

	* richtextbox.cpp|h: New source files for the RichTextBox
	implementation.

	* textblock.cpp (TextBlock::OnPropertyChanged): Update the
	layout's TextTrimming mode.

	* layout.cpp (SetTextTrimming): Implemented.

2010-05-10  Jeffrey Stedfast  <fejj@novell.com>

	* pal/gtk/install-dialog.cpp (install_dialog_new): Use SendNow()